# crowdwhisper

./: .gitignore  README.md  pyproject.toml
app/: __init__.py  analyzer.py  main.py  steam.py
app/static/: style.css
app/templates/: index.html
