[project]
name = "crowdwhisper"
version = "0.1.0"
description = "Steam player feedback monitoring & analysis"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.34",
    "httpx>=0.28",
    "jinja2>=3.1",
    "pydantic>=2.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8",
    "ruff>=0.9",
]

[tool.ruff]
line-length = 100
target-version = "py311"
